--- a/hw-3/mthe-477-hw-3-q-4.tex
+++ b/hw-3/mthe-477-hw-3-q-4.tex
@@ -6,7 +6,7 @@
 \edef\normaljobname{\expandafter\scantokens\expandafter{\jobname\noexpand}}
 \StrBetween{\normaljobname}{hw-}{-q}[\homeworknumber]
 \StrBehind{\normaljobname}{-q-}[\questionnumber]
-% endregion Filename parsing.
+% endregion
 
 \documentclass[
   coursecode={MTHE 477},
@@ -15,6 +15,7 @@
   name={Bryan Hoang},
   draft,
   % final,
+  date=2022-03-07,
 ]{
   ltxanswer%
 }
@@ -25,9 +26,15 @@
   \begin{questions}
     \setcounter{question}{\questionnumber}
     \addtocounter{question}{-1}
-    \question[0]{}
-    \begin{solution}
-      42.
-    \end{solution}
+    \question[20]\
+    \begin{parts}
+      \part{}
+      \begin{solution}
+      \end{solution}
+
+      \part{}
+      \begin{solution}
+      \end{solution}
+    \end{parts}
   \end{questions}
 \end{document}
